--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <center style="font-weight: bold; font-size: larger;">Etch-A-Sketch</center><hr> 
+    <center style="font-weight: bold; font-size: larger; color: bisque;">Etch-A-Sketch</center>
     <div class="grid-container"  id = "gridContainer"></div>
     <div class="button-container">
         <button onclick="resetGrid()">Set Grid Size</button>
@@ -19,41 +19,56 @@
         const totalSize = 960;
 
         function createGrid(size) {
-        container.innerHTML = ""; // Clear existing grid
-        container.style.gridTemplateColumns = `repeat(${size}, 1fr)`;
-        container.style.gridTemplateRows = `repeat(${size}, 1fr)`;
-        const squareSize = totalSize / size;
-        
+            container.innerHTML = ""; // Clear existing grid
+            const squareSize = totalSize / size;
 
-        for(let i = 0;i < size * size; i++){
-            const div = document.createElement("div");
-            div.classList.add("grid-item");
-            div.addEventListener("mouseover", () => {
-            div.style.backgroundColor = `hsl(${Math.random() * 360}, 100%, 50%)`;
-            });
+            for (let i = 0; i < size * size; i++) {
+                const div = document.createElement("div");
+                div.classList.add("grid-item");
+                div.style.width = `${squareSize}px`;
+                div.style.height = `${squareSize}px`;
+                div.dataset.opacity = 0;
 
-            container.appendChild(div);
-        }
+                div.addEventListener("mouseover", () => {
+                    // Option 1: Random RGB color
+                    const r = Math.floor(Math.random() * 256);
+                    const g = Math.floor(Math.random() * 256);
+                    const b = Math.floor(Math.random() * 256);
+
+                    // Option 2: Progressive darkening
+                    let opacity = parseFloat(div.dataset.opacity);
+                    if (opacity < 1) {
+                        opacity += 0.1;
+                        div.dataset.opacity = opacity.toFixed(1);
+                    }
+                    div.style.backgroundColor = `rgba(${r}, ${g}, ${b}, ${div.dataset.opacity})`;
+                });
+
+                container.appendChild(div);
+            }
         }
 
         function resetGrid() {
-        let newSize = prompt("Enter number of squares per side (max 100):", 16);
-        newSize = parseInt(newSize);
-        if (newSize && newSize > 0 && newSize <= 100) {
-            createGrid(newSize);
-        } else {
-            alert("Please enter a number between 1 and 100.");
-        }
-        }
-
-            function clearColors() {
-        const squares = document.querySelectorAll(".grid-item");
-        squares.forEach(square => {
-            square.style.backgroundColor = "#000000";
-        });
+            let newSize = prompt("Enter number of squares per side (max 100):", 16);
+            newSize = parseInt(newSize);
+            if (newSize && newSize > 0 && newSize <= 100) {
+                createGrid(newSize);
+            } else {
+                alert("Please enter a number between 1 and 100.");
+            }
         }
 
-        createGrid(16); 
+        function clearColors() {
+            const squares = document.querySelectorAll(".grid-item");
+            squares.forEach(square => {
+                square.style.backgroundColor = "rgba(0, 0, 0, 0)";
+                square.dataset.opacity = 0;
+            });
+        }
+
+        createGrid(16)
     </script>
+
+
 </body>
 </html>
