--- a/index.html
+++ b/index.html
@@ -5,70 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+   
     <center style="font-weight: bold; font-size: larger; color: bisque;">Etch-A-Sketch</center>
     <div class="grid-container"  id = "gridContainer"></div>
     <div class="button-container">
         <button onclick="resetGrid()">Set Grid Size</button>
         <button onclick="clearColors()">Clear Colors</button>
     </div>
-
-    <script>
-        const container = document.getElementById("gridContainer");
-        const totalSize = 960;
-
-        function createGrid(size) {
-            container.innerHTML = ""; // Clear existing grid
-            const squareSize = totalSize / size;
-
-            for (let i = 0; i < size * size; i++) {
-                const div = document.createElement("div");
-                div.classList.add("grid-item");
-                div.style.width = `${squareSize}px`;
-                div.style.height = `${squareSize}px`;
-                div.dataset.opacity = 0;
-
-                div.addEventListener("mouseover", () => {
-                    // Option 1: Random RGB color
-                    const r = Math.floor(Math.random() * 256);
-                    const g = Math.floor(Math.random() * 256);
-                    const b = Math.floor(Math.random() * 256);
-
-                    // Option 2: Progressive darkening
-                    let opacity = parseFloat(div.dataset.opacity);
-                    if (opacity < 1) {
-                        opacity += 0.1;
-                        div.dataset.opacity = opacity.toFixed(1);
-                    }
-                    div.style.backgroundColor = `rgba(${r}, ${g}, ${b}, ${div.dataset.opacity})`;
-                });
-
-                container.appendChild(div);
-            }
-        }
-
-        function resetGrid() {
-            let newSize = prompt("Enter number of squares per side (max 100):", 16);
-            newSize = parseInt(newSize);
-            if (newSize && newSize > 0 && newSize <= 100) {
-                createGrid(newSize);
-            } else {
-                alert("Please enter a number between 1 and 100.");
-            }
-        }
-
-        function clearColors() {
-            const squares = document.querySelectorAll(".grid-item");
-            squares.forEach(square => {
-                square.style.backgroundColor = "rgba(0, 0, 0, 0)";
-                square.dataset.opacity = 0;
-            });
-        }
-
-        createGrid(16)
-    </script>
-
 
 </body>
 </html>
